--- a/spring_banking/src/main/webapp/WEB-INF/views/customer/edit.html
+++ b/spring_banking/src/main/webapp/WEB-INF/views/customer/edit.html
@@ -27,13 +27,13 @@
                 <div class="col-md-6 mb-3">
                     <label for="fullName" class="form-label">Full Name</label>
                     <input type="text" class="form-control" id="fullName" name="name"
-                           th:value="*{fullName}" th:field="*{fullName}"
+                           th:field="*{fullName}"
                     >
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" id="email" name="email"
-                           th:value="*{email}" th:field="*{email}"
+                          th:field="*{email}"
                     >
                 </div>
             </div>
@@ -41,13 +41,13 @@
                 <div class="col-md-6 mb-3">
                     <label for="phone" class="form-label">Phone Number</label>
                     <input type="text" class="form-control" id="phone" name="phone"
-                           th:value="*{phone}" th:field="*{phone}"
+                            th:field="*{phone}"
                     >
                 </div>
                 <div class="col-md-6 mb-3">
                     <label for="address" class="form-label">Address</label>
                     <input type="text" class="form-control" id="address" name="address"
-                           th:value="*{address}" th:field="*{address}"
+                            th:field="*{address}"
                     >
                 </div>
             </div>
@@ -58,7 +58,33 @@
         </form>
     </div>
 </div>
+<footer class="container-fluid">
+    <th:block th:if="${error == true}">
+        <ul class="container">
+            <li>Customer not found !</li>
+        </ul>
+    </th:block>
 
+
+    <th:block th:if="${success == true}">
+        <div class="success">
+            <ul class="container">
+                <li th:text="${messages}"></li>
+            </ul>
+        </div>
+    </th:block>
+
+    <th:block th:if="${hasError} == true">
+                    <ul>
+                        <li th:each="err : ${#fields.errors('customer.*')}" th:text="${err}"></li>
+                    </ul>
+                </th:block>
+                <th:block th:if="${notValid} == true">
+                    <ul>
+                        <li th:text="${message}"></li>
+                    </ul>
+                </th:block>
+</footer>
 
 </body>
 </html>
